--- a/Lista 2/Ex1/public_html/index.html
+++ b/Lista 2/Ex1/public_html/index.html
@@ -14,14 +14,14 @@ and open the template in the editor.
         <form>
             <label>Nome<br></label><input type="text" id="nome" name="nome " required/><br/><br>
             <label>Email<br></label><input name="email" id="email" type="email"  required/><br/><br/>
-            <label>Telefone<br></label><input type="text" id="tel" name="tel" maxlength="14"><br/><br/>
+            <label>Telefone<br></label><input type="tel" id="tel" name="tel" maxlength="14"><br/><br/>
             <label>Endereço<br></label><input type="text" id="end" name="endereco" required/><br/><br/>
             <label>CEP<br></label><input name="CEP" id="CEP" required pattern="\d{5}-?\d{3}"/><br/><br/>
             <button name="buttonEnviar" value="Enviar" type="submit">
                 <img src="http://www.bibliotecapolicial.com.br/images/ico_enviar_email.png"
                      alt="Ícone">
             </button>
-            <input type="file" name="oi" value="" />
+            <input type="search" name="oi" value="" />
         </form>
     </body>
 </html>
