--- a/Lista 2/Ex4/public_html/index.html
+++ b/Lista 2/Ex4/public_html/index.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>Cadastro de Cliente</h1> 
-        <form>
+        <form name="cadastro" action="processar_req.php" method="POST">
             <label>Nome<br></label><input type="text" id="nome" name="nome " required/><br/><br>
             <label>Email<br></label><input name="email" id="email" type="email"  required/><br/><br/>
             <label>Telefone<br></label><input type="tel" id="tel" name="tel" maxlength="14"><br/><br/>
