--- a/Lista 2/Ex6/public_html/index.html
+++ b/Lista 2/Ex6/public_html/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Formulário de Cadastro</title>
+        <title>Formulário com dois botões </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
