--- a/Lista 2/Ex8/public_html/index.html
+++ b/Lista 2/Ex8/public_html/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exemplos</title>
+        <title>Escolhe de Time</title>
         <meta charset="UTF-8">
     </head>
     <body>
-        <p><b>Escolha seu time:</b></p>
+        <p><b>Escolha seu time da Libertadores:</b></p>
         <form name="numeros" action="processar_req.php" method="POST">
             <select id="id_time" name="time">
                 <optgroup label="Grupo 1">
@@ -58,7 +58,7 @@
                 </optgroup>
                 
             </select><br/>
-            <input type="submit" id="id_button" name="button" value="Enviar"/>
+            <input type="submit" id="id_button" name="button" value="Escolher Time"/>
         </form>
     </body>
 </html>
