--- a/Lista 2/Ex4/public_html/index.html
+++ b/Lista 2/Ex4/public_html/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <title>Formulário de Cadastro</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="stylesheet.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1>Cadastro de Cliente</h1> 
