--- a/Lista 2/Ex18/public_html/index.html
+++ b/Lista 2/Ex18/public_html/index.html
@@ -16,41 +16,65 @@ and open the template in the editor.
             <form action="processar_req.php" method="POST" name="formulario">
 
                 <h2>Dados Pessoais</h2>
-                <input type="text" id="nome" name="nome " placeholder="Nome" required/><br/><br>
+                <input type="text" id="nome" name="nome " placeholder="Nome" required/><br/><br></label>
                 <input type="text" id="sobrenome" name="sobrenome " placeholder="Sobrenome" required/><br/><br>
                 <input name="email" id="email" type="email" placeholder="Email" required/><br/><br/>
                 <input type="tel" id="tel" name="tel" placeholder="Telefone" maxlength="14"><br/><br/>
                 <input type="text" id="end" name="endereco" placeholder="Endereço" required/>
-                <input type="url" id="complemento" name="comple" placeholder="Complemento" required/><br/><br/>
+                <input type="text" id="complemento" name="comple" placeholder="Complemento" required/><br/><br/>
                 <input name="CEP" id="CEP" placeholder="CEP" required pattern="\d{5}-?\d{3}"/><br/><br/>
 
                 <h2>Entrega</h2>
                 <ul>
                     <li>
-                        <label>Spaguetti</label><br>
-                        <input id="selecao" type="checkbox" name="Spaguetti" value="ON"/>
-                        <img id="comida" src="imagens/spaguetti.jpg" alt=""/>
+                        <label>Comida</label><br><br>
+                        <ul>
+                            <li>
+                                <label>Spaguetti</label><br>
+                                <input id="selecao" type="checkbox" name="Spaguetti" value="ON"/>
+                                <img id="comida" src="imagens/spaguetti.jpg" alt="Spaguetti"/> 
+                                <label>Quantidade</label>
+                                <input type="number" id="quant" name="quant_spaguetti " min="0" value="0"/><br/><br>
+                            </li>
+                            <li>
+                                <label>Caneloni</label><br>
+                                <input id="selecao" type="checkbox" name="Caneloni" value="ON"/>
+                                <img id="comida" src="imagens/canelone.jpg" alt="Caneloni"/>
+                                <label>Quantidade</label>
+                                <input type="number" id="quant" name="quant_caneloni " min="0" value="0"/><br/><br>
+                            </li>
+                            <li>
+                                <label>Lasagna</label><br>
+                                <input id="selecao" type="checkbox" name="Lasagna" value="ON"/>
+                                <img id="comida" src="imagens/lasagnajpg.jpg" alt="Lasagna"/>
+                                <label>Quantidade</label>
+                                <input type="number" id="quant" name="quant_lasagna " min="0" value="0"/><br/><br>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <label>Caneloni</label><br>
-                        <input id="selecao" type="checkbox" name="Spaguetti" value="ON"/>
-                         <img id="comida" src="imagens/canelone.jpg" alt="Spaguetti"/><br>
+                        <label>Bebida</label><br><br>
+                        <select id="bebida" name="refri[]" multiple>
+                            <optgroup label="Refrigerante(1L)">
+                                <option value="guarana">Guaraná</option>
+                                <option value="coca">Coca-Cola</option>
+                                <option value="fanta">Fanta Laranja</option>
+                                <option selected="" value="Shweppes">Shweppes</option>
+                            </optgroup>
+                            <optgroup label="Suco(500ml)">
+                                <option value="Laranja">Laranja</option>
+                                <option value="Melancia">Melancia</option>
+                                <option value="Limao">Limão</option>
+                                <option value="Uva">Uva</option>                    
+                            </optgroup>
+                        </select>
                     </li>
-                    <li>third</li>
-
-                </ul>
-
-
-                
-
-
-               
-
-                <button name="buttonEnviar" value="Enviar" type="submit">
+                </ul><br>
+                <button id="botao" name="buttonEnviar" value="Enviar" type="submit">
                     <img src="http://www.bibliotecapolicial.com.br/images/ico_enviar_email.png"
                          alt="Ícone">
-                </button>
+                </button>  
             </form>
-        </div
+        </div>
     </body>
 </html>
