--- a/Lista 3/Ex20/Ex20.html
+++ b/Lista 3/Ex20/Ex20.html
@@ -2,17 +2,13 @@
 <html>
 <head>
 <style>
-img.normal {
-    height: auto;
-}
-
-img.big {
-    height: 120px;
-}
 
 p.ex {
     height: 100px;
     width: 100px;
+	height: auto;
+	background-color: #ff0055;
+    box-shadow: 10px 10px 5px #888888;
 }
 </style>
 </head>
