--- a/Lista 3/Ex16/ex16.html
+++ b/Lista 3/Ex16/ex16.html
@@ -6,11 +6,14 @@
 
 div {
     border-radius: 50px;
-    border-color: #ff0000 #0000ff;
-    border: 18px solid blue ;
-    padding: 20px; 
+    border-color: #ff0000 #1000FF #ff0000 #1000FF ;
+	border-width: 10px;
+	border-style: solid;
+	padding: 20px; 
     width: 200px;
     height: 150px;    
+	
+    
 }
 
 
