--- a/Lista 3/Ex4/public_html/index.html
+++ b/Lista 3/Ex4/public_html/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Pseudo Not</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/" href="css/stylesheet.css"
+        <link rel="stylesheet" type="text/css" href="css/stylesheet.css"
     </head>
     <body>
         <div>
